# alpaka_windows_githubci

./: CMakeLists.txt  c.sh
.github/workflows/: testUbuntu.yml  testWindows.yml
src/: main.cpp
